--- a/Alcolist/war/Alcolist.css
+++ b/Alcolist/war/Alcolist.css
@@ -2,17 +2,11 @@
 
 
 /** Example rules used by the template application (remove for your app) */
-h1 {
-  font-size: 2em;
-  font-weight: bold;
-  color: #777777;
-  margin: 40px 0px 70px;
-  text-align: center;
-}
 
-.sendButton {
-  display: block;
-  font-size: 16pt;
+
+.title {
+	font-size: 3em;
+	font-weight: bold;
 }
 
 /** Most GWT widgets already have a style name defined */
