--- a/Alcolist/src/com/lamchop/alcolist/client/NewStyle.css
+++ b/Alcolist/src/com/lamchop/alcolist/client/NewStyle.css
@@ -9,6 +9,12 @@
   overflow: hidden;
   white-space: nowrap;
   text-font: 85%;
+  background: white;
+/*   border-top: 1px solid black; */
+}
+
+.dataGridLastColumn {
+  border-right: 1px solid black;
 }
 
 .dataGridEvenRow {
