--- a/Alcolist/war/Alcolist.css
+++ b/Alcolist/war/Alcolist.css
@@ -22,6 +22,11 @@
   color: red;
 }
 
+.listPanel {
+	border: 1px solid black;
+	box-shadow: inset 3px 3px 5px 5px #000000;
+}
+
 /** Set ids using widget.getElement().setId("idOfElement") */
 #closeButton {
   margin: 15px 6px 6px;
