--- a/Alcolist/war/Alcolist.css
+++ b/Alcolist/war/Alcolist.css
@@ -24,7 +24,7 @@
 
 .listPanel {
 	border: 1px solid black;
-	box-shadow: inset 3px 3px 5px 5px #000000;
+	background: white;
 }
 
 /** Set ids using widget.getElement().setId("idOfElement") */
