--- a/Alcolist/war/Alcolist.css
+++ b/Alcolist/war/Alcolist.css
@@ -27,13 +27,19 @@
 	background: white;
 }
 
-.gwt-ToggleButton-up,.gwt-ToggleButton-up-hovering,.gwt-ToggleButton-up-disabled
-  {
+.gwt-ToggleButton-up,.gwt-ToggleButton-up-hovering,.gwt-ToggleButton-up-disabled {
   padding: 0px 0px 0px 0px;
 }
 
-.gwt-ToggleButton-down,.gwt-ToggleButton-down-hovering,.gwt-ToggleButton-down-disabled
-  {
+.gwt-ToggleButton-down,.gwt-ToggleButton-down-hovering,.gwt-ToggleButton-down-disabled {
+  padding: 0px 0px 0px 0px;
+}
+
+.gwt-PushButton-up,.gwt-PushButton-up-hovering,.gwt-PushButton-up-disabled {
+  padding: 0px 0px 0px 0px;
+}
+
+.gwt-PushButton-down,.gwt-PushButton-down-hovering,.gwt-PushButton-down-disabled {
   padding: 0px 0px 0px 0px;
 }
 
