--- a/Alcolist/war/Alcolist.css
+++ b/Alcolist/war/Alcolist.css
@@ -56,7 +56,7 @@
 }
 
 .gwt-SuggestBox-location {
-	border: 0px;
+	border: 0px;	
 	width:200px;
 	padding:2px;
 	font-style: italic;
@@ -64,6 +64,7 @@
 }
 
 .gwt-SuggestBox-setLocation {
+	padding-right: 20px;
 	border: 0px;
 	width:200px;
 	padding:2px;
@@ -72,12 +73,12 @@
 }
 
 .gwt-SuggestBox-locationInvalid {
-	border: 2px;
+	border: inset 10px;
 	border-color: red;
 	width:200px;
 	padding:2px;
 	font-style: normal;
-	background: red;
+/* 	background: red; */
 }
 
 .gwt-Button-addLocation {
@@ -92,6 +93,10 @@
 	text-align: center;
 	border: 0px;
 	height: 30px;
+}
+
+.gwt-Label-locations {
+	font-style: italic;
 }
 
 
