some minor changes

--- a/Alcolist/src/com/lamchop/alcolist/client/ui/CellTable.css
+++ b/Alcolist/src/com/lamchop/alcolist/client/ui/CellTable.css
@@ -36,7 +36,8 @@
 } 
 
 .cellTableCell { 
-  padding-left: 0px; 
+  padding-left: 0px;
+  padding-right: 0px; 
 } 
 
 .cellTableFirstColumnFooter { 
